--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flowbite-react": "^0.7.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reacticons": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
